# symph-test-10

./: .gitignore  Makefile  README.md  VALIDATION_GAP.md  WORKFLOW.md  erl_crash.dump  gaps.xml  mise.toml  pyproject.toml  run_live_demo.py  setup_vllm_instance.sh
.github/workflows/: ci.yml
dashboard/symphony_dashboard/: .gitignore  README.md  mix.exs
dashboard/symphony_dashboard/assets/css/: app.css
dashboard/symphony_dashboard/assets/js/: app.js
dashboard/symphony_dashboard/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
dashboard/symphony_dashboard/lib/: symphony_dashboard.ex  symphony_dashboard_web.ex
dashboard/symphony_dashboard/lib/symphony_dashboard/: application.ex
dashboard/symphony_dashboard/lib/symphony_dashboard_web/: endpoint.ex  router.ex  telemetry.ex
dashboard/symphony_dashboard/lib/symphony_dashboard_web/components/: core_components.ex  layouts.ex
dashboard/symphony_dashboard/lib/symphony_dashboard_web/controllers/: error_html.ex  error_json.ex  page_html.ex  (+1 more)
dashboard/symphony_dashboard/test/support/: conn_case.ex
symphony/: __init__.py  agent_runner.py  api.py  cli.py  config.py  feature_tracker.py  log_file.py  models.py  observability.py  orchestrator.py  path_safety.py  pr_cleanup.py  prompt_builder.py  ssh.py  status_dashboard.py  workflow.py  workspace.py
symphony/codex/: __init__.py  app_server.py  dynamic_tool.py
symphony/tracker/: __init__.py  base.py  github.py  memory.py
tests/: test_agent_runner.py  test_api.py  test_app_server.py  test_config.py  test_dynamic_tool.py  test_e2e_gemma4.py  test_e2e_orchestrator.py  test_extensions.py  test_feature_tracker.py  test_observability.py  test_orchestrator.py  test_path_safety.py  test_pr_cleanup.py  test_prompt_builder.py  test_ssh.py  test_status_dashboard.py  test_tracker.py  test_two_phase.py  test_validation.py  test_validation_loop.py  test_workflow.py  test_workspace.py  test_workspace_ssh.py
(+5 files in other folders)
