[project]
name = "symphony"
version = "0.1.0"
description = "Python reimplementation of OpenAI Symphony — autonomous coding orchestrator"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "respx>=0.22",
]

[project.scripts]
symphony = "symphony.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30

[tool.setuptools.packages.find]
include = ["symphony*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
